Skills overflow bug kind of fixed

--- a/style.css
+++ b/style.css
@@ -15,18 +15,18 @@ body {
 }
 
     .profile-img img {
-        height: 50%;
+        height: 40%;
     }
 
 .about {
-    margin-left: 15px;
+    margin-left: 3%;
 }
 
 .profile-info {
-    width: 60%;
+    width: 70%;
     height: 100vh;
     float: left;
-    padding: 0 30px;
+    padding: 0 6%;
     overflow: scroll;
     overflow-x: hidden;
     scrollbar-width: none;
@@ -38,53 +38,58 @@ body {
     }
 
     .profile-info h1 {
-        margin-top: 50px;
-        margin-bottom: 30px;
+        margin-top: 10%;
+        margin-bottom: 6%;
     }
 
 .social-media img {
-    height: 30px;
-    margin-right: 15px;
+    height: 6%;
+    margin-right: 3%;
 }
 
 .social-media {
-    margin-top: 20px;
-    margin-left: 15px;
+    margin-top: 4%;
+    margin-left: 3%;
 }
 
 .profile-info h2 {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 4%;
+    margin-bottom: 2%;
 }
 
 .skill {
     background-color: #fff;
     display: inline-block;
-    width: 28%;
-    height: 200px;
-    padding: 30px 10px;
+    width: 18%;
+    height: 12%;
+    padding: 1% 1%; 
     margin: 2%;
     text-align: center;
+    overflow-y: hidden;
     box-shadow: 0 0 15px 1px rgba(37, 73, 214, 0.18);
 }
 
     .skill img {
-        height: 30%;
-        margin: 5px;
-        padding-left: 5px;
-        padding-right: 5px;
+        height: 40%;
+        margin: 1%;
+        padding-left: 1%;
+        padding-right: 1%;
     }
 
     .skill small {
-        padding-top: 10px;
+        padding-top: 2%;
         display: block;
+    }
+
+    .skill p {
+        font-size:80%;
     }
 
 .project img {
     width: 10%;
-    padding: 4px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+    padding: 2%;
+    margin-bottom: 1%;
+    margin-top: 1%;
 }
 
 .project project1 {
@@ -92,14 +97,14 @@ body {
 }
 
 .form-box {
-    margin-top: 30px;
+    margin-top: 6%;
 }
 
 .input-group input {
     width: 45%;
     border: 0;
     outline: none !important;
-    padding: 10px;
+    padding: 2%;
     margin: 2%;
     display: inline-block;
     background: white;
@@ -109,7 +114,7 @@ body {
     width: 95%;
     border: 0;
     outline: none !important;
-    padding: 10px;
+    padding: 2%;
     margin: 2%;
     background: white;
 }
@@ -117,7 +122,7 @@ body {
 .submit-btn {
     border: 0;
     outline: none !important;
-    padding: 10px 20px;
+    padding: 2% 4%;
     margin: 2%;
     background: #2ab0ff;
     cursor: pointer;
@@ -125,8 +130,8 @@ body {
 }
 
 .contact img {
-    width: 20px;
-    margin: -5px 10px;
+    width: 4%;
+    margin: -1% 2%;
 }
 
 .contact span {
@@ -140,14 +145,44 @@ body {
 
 .copyright {
     text-align: center;
-    margin-bottom:20px;
+    margin-bottom:4%;
 }
 
-@media only screen and (max-width:900px)
+.work-experience {
+    background-color: #fff;
+    display: inline-block;
+    width: 15%;
+    height: 10%;
+    padding: 1% 2%;
+    margin: 2%;
+    margin-right:0%;
+    margin-top: 1%;
+    text-align: center;
+    overflow-y: hidden;
+    box-shadow: 0 0 15px 1px rgba(37, 73, 214, 0.18);
+}
+.job {
+    background-color: #fff;
+    display: inline-block;
+    width: 75%;
+    height: 10%;
+    padding: 1% 2%;
+    margin: 2%;
+    margin-left:0%;
+    text-align: left;
+    overflow-y: hidden;
+    box-shadow: 0 0 15px 1px rgba(37, 73, 214, 0.18);
+}
+
+    
+
+@media only screen and (max-width:1300px)
 {
     .profile-info
     {
         width:100%;
+        padding-right: 5%;
+        padding-left: 5%;
         overflow: inherit;
     }
     .profile-img
@@ -156,13 +191,16 @@ body {
     }
     .skill
     {
-        width: 95%;
-        margin-bottom:10%;
+        width: 19%;
+        height: 17%;
+        margin-left:1%;
+        margin-right:1%;
+        margin-bottom: 3%;
     }
     .skill img
     {
-        height: 8%;
-        margin: 10px;
+        height: 30%;
+        margin: 2%;
     }
     .project img
     {
